logs/isotoma.plone.heroku.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/isotoma'...
Listing './lib/python3.5/site-packages/isotoma/plone'...
Listing './lib/python3.5/site-packages/isotoma/plone/heroku'...
Compiling './lib/python3.5/site-packages/isotoma/plone/heroku/migrate.py'...
***   File "./lib/python3.5/site-packages/isotoma/plone/heroku/migrate.py", line 33
    print o.config, "not found"
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/isotoma/plone/heroku/other.py'...
***   File "./lib/python3.5/site-packages/isotoma/plone/heroku/other.py", line 28
    print args[0], "not found"
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/isotoma/recipe'...
Listing './lib/python3.5/site-packages/isotoma/recipe/plonetools'...
Compiling './lib/python3.5/site-packages/isotoma/recipe/plonetools/__init__.py'...
***   File "./lib/python3.5/site-packages/isotoma/recipe/plonetools/__init__.py", line 98
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/isotoma/recipe/plonetools/plonesite.py'...
***   File "./lib/python3.5/site-packages/isotoma/recipe/plonetools/plonesite.py", line 37
    print "Migrating '%s' to seperate ZODB storage" % mp['path']
                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/isotoma.plone.heroku-0.0.0.egg-info'...
Listing './lib/python3.5/site-packages/isotoma.recipe.plonetools-0.0.17.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/buildout'...
Listing './lib/python3.5/site-packages/zc.buildout-2.10.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
